--- a/20190711/hw01.html
+++ b/20190711/hw01.html
@@ -1564,6 +1564,14 @@ div.tocify {
 </div>
 
 
+<style type="text/css">
+pre code, pre, code {
+  white-space: pre !important;
+  overflow-x: scroll !important;
+  word-break: keep-all !important;
+  word-wrap: initial !important;
+}
+</style>
 <h3>
 勞工對工作時數之滿意情形
 </h3>
